# hikari

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: auto-release.yml
crates/hikari-core/: Cargo.toml
crates/hikari-core/src/: lib.rs
crates/hikari-token/: Cargo.toml
crates/hikari-token/src/: lib.rs
crates/hikari-ts/: Cargo.toml
crates/hikari-ts/src/: lib.rs
crates/hikari-ts/tests/: language_matrix.rs
