[workspace]
resolver = "3"
members = ["crates/hikari-core", "crates/hikari-token", "crates/hikari-ts"]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/pleme-io/hikari"
authors = ["pleme-io"]

[workspace.lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
