[package]
name = "hikari-ts"
description = "hikari (光) — the tree-sitter backend. The fleet's self-contained tree-sitter host: GrammarRegistry + BufferParser (incremental Tree::edit reparse) + a generic TreeSitterHighlighter (one type for every grammar) implementing hikari_core::Highlighter, lowering tree-sitter captures to hikari HlClass through the coverage-by-construction SpanSink."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["syntax", "highlighting", "tree-sitter", "editor"]
categories = ["text-editors", "parsing"]

# This is the ONE heavy/non-hermetic hikari crate: it bundles the tree-sitter C
# runtime + grammar C sources, isolated here so hikari-core / hikari-token stay
# light + zero-dep. It owns the tree-sitter host outright (no application-crate
# dependency) — escriba-ts re-exports THIS crate, not the other way around.
[dependencies]
hikari-core = { version = "0.1", path = "../hikari-core" }
hikari-token = { version = "0.1", path = "../hikari-token" }
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
# Grammars — the go-wide set (ABI-compatible with tree-sitter 0.22).
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-json = "0.21"
tree-sitter-bash = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-css = "0.21"
tree-sitter-html = "0.20"
tree-sitter-ruby = "0.21"
# (TOML stays on the zero-dep table backend — tree-sitter-toml-ng pins a newer
# `cc` that conflicts with the 0.21-era grammars; not worth the split.)
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
hikari-core = { version = "0.1", path = "../hikari-core" }

[lints]
workspace = true
